add operations with gold
